--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,72 +1,62 @@
-apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
+plugins {
+    id 'com.android.application'
+    id 'kotlin-android'
+}
 
 android {
-    compileSdkVersion 33
-
+    compileSdk 34
     defaultConfig {
         applicationId "maulik.barcodescanner"
-        minSdkVersion 21
-        targetSdkVersion 32
+        minSdk 28
+        targetSdk 34
         versionCode 7
         versionName "1.6"
-
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-
     compileOptions {
         coreLibraryDesugaringEnabled true
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-
-    kotlinOptions {
-        jvmTarget = "1.8"
-    }
-
-    buildFeatures {
-        viewBinding true
-    }
+    kotlinOptions { jvmTarget = "1.8" }
+    buildFeatures { viewBinding true }
+    namespace 'maulik.barcodescanner'
 }
 
 dependencies {
-    implementation fileTree(dir: "libs", include: ["*.jar"])
+    /* ---- Cloudinary ---- */
+    implementation 'com.cloudinary:cloudinary-android:2.4.0'
 
-    implementation 'androidx.core:core-ktx:1.9.0'
-    implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    /* ---- OkHttp stack (BOM keeps versions aligned) ---- */
+    implementation platform('com.squareup.okhttp3:okhttp-bom:4.10.0')
+    implementation 'com.squareup.okhttp3:okhttp'
+    implementation 'com.squareup.okhttp3:logging-interceptor'
+
+    /* ---- AndroidX / Google ---- */
+    implementation 'androidx.core:core-ktx:1.12.0'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.11.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.7.0'
+    implementation 'androidx.recyclerview:recyclerview:1.3.2'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.2.1'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    implementation 'com.google.android.material:material:1.6.1'
+    /* ---- CameraX & barcode ---- */
+    def camerax_version = "1.3.2"
+    implementation "androidx.camera:camera-camera2:$camerax_version"
+    implementation "androidx.camera:camera-lifecycle:$camerax_version"
+    implementation "androidx.camera:camera-view:$camerax_version"
+    implementation 'com.google.mlkit:barcode-scanning:17.2.0'
+    implementation 'com.google.zxing:core:3.5.1'
+    //
+    // THIS IS THE FIX: Add the Guava dependency that provides ListenableFuture
+    implementation "com.google.guava:guava:31.1-android"
+    //
+
+    /* ---- misc ---- */
     implementation 'com.intuit.sdp:sdp-android:1.1.0'
-
-    implementation 'com.google.zxing:core:3.4.1'
-    // Use this dependency to bundle the model with your app
-    implementation 'com.google.mlkit:barcode-scanning:17.0.2'
-
-    // CameraX core library using the camera2 implementation
-    def camerax_version = "1.2.0-beta02"
-    implementation "androidx.camera:camera-camera2:${camerax_version}"
-    // If you want to additionally use the CameraX Lifecycle library
-    implementation "androidx.camera:camera-lifecycle:${camerax_version}"
-    // If you want to additionally use the CameraX View class
-    implementation "androidx.camera:camera-view:${camerax_version}"
-
-    /**
-     * ZXing 3.4+ uses Java 8 language features, so it is required to enable core library desugaring
-     * in order to use the Zxing on API < 23
-     */
-    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
-
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.2.2'
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
