--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="maulik.barcodescanner">
-
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-feature android:name="android.hardware.camera.any"/>
+    <!-- add *both* so the right one is requested at runtime -->
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA"/>
 
     <application
@@ -14,11 +16,13 @@
         android:theme="@style/AppTheme">
         <activity android:name=".ui.BarcodeScanningActivity"
             android:screenOrientation="sensorPortrait"
-            android:theme="@style/FullScreenTheme"
+            android:exported="false"/>
+        <activity
+            android:name=".ui.GalleryActivity"
+            android:screenOrientation="sensorPortrait"
             android:exported="false"/>
         <activity android:name=".ui.MainActivity"
             android:screenOrientation="sensorPortrait"
-            android:theme="@style/NoActionBarTheme"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
